test/corpus/multiple_declarations.txt
=========================================================
Multiple declarations of variables(operation, expression)
=========================================================

a = 3;
b = 3 * a;
c = a + 3 * b;

---

(source_file
  (expression (identifier) (number))
  (expression (identifier) (operation (number) (identifier)))
  (expression (identifier) (operation (identifier) (operation (number) (identifier))))
)
